# marsoom

./: .gitignore  README.md  demo_gui.py  pyproject.toml
.pixi/envs/default/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  bzip2-1.0.8-h4bc722e_7.json  ca-certificates-2024.8.30-hbcca054_0.json  ld_impl_linux-64-2.43-h712a8e2_2.json  libexpat-2.6.4-h5888daf_0.json  libffi-3.4.2-h7f98852_5.json  libgcc-14.2.0-h77fa898_1.json  libgcc-ng-14.2.0-h69a702a_1.json  libgomp-14.2.0-h77fa898_1.json  liblzma-5.6.3-hb9d3cd8_0.json  liblzma-devel-5.6.3-hb9d3cd8_0.json  libmpdec-4.0.0-h4bc722e_0.json  libsqlite-3.47.0-hadc24fc_1.json  libuuid-2.38.1-h0b41bf4_0.json  libzlib-1.3.1-hb9d3cd8_2.json  ncurses-6.5-he02047a_1.json  openssl-3.4.0-hb9d3cd8_0.json  pixi  pixi_env_prefix  python-3.13.0-h9ebbce0_101_cp313.json  python_abi-3.13-5_cp313.json  readline-8.2-h8228510_1.json  tk-8.6.13-noxft_h4845f30_101.json  tzdata-2024b-hc8b5060_0.json  xz-5.6.3-hbcc6ac9_0.json  xz-gpl-tools-5.6.3-hbcc6ac9_0.json  xz-tools-5.6.3-hb9d3cd8_0.json
.pixi/envs/default/share/terminfo/a/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.pixi/envs/default/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  crt  (+1 more)
scripts/: demo_gui.py  demo_gui_cuda.py  depth_texture_test.py  realsense_test.py  test_cuda_interop.py
src/marsoom/: __init__.py  axes.py  camera_wireframe.py  context_3d.py  grid.py  image_quad.py  line_model.py  overlay.py  points.py  shape_3d.py  structured_pointcloud.py  texture.py  utils.py  vertex_domain.py  viewer_2d.py  viewer_3d.py  window.py
src/marsoom/cuda/: __init__.py  cuda_buffer_object.py  cuda_vertex_domain.py  ellipse_renderer.py  ellipse_renderer_2.py  line_renderer.py  mesh_renderer.py  point_renderer.py  render_opengl.py  vector_renderer.py
src/marsoom/decoders/: stl.py
src/marsoom/renderers/: axis_renderer.py  ellipse_renderer.py  line_renderer.py  mesh_renderer.py  point_renderer.py  sphere_renderer.py  spring_renderer.py  trajectory_renderer.py  vector_renderer.py
(+137 files in other folders)
