[project]
name = "marsoom"
readme = "README.md"
version = "2.0.9"
description = "A 3D drawing tool"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "imgui_bundle>=1.6.1",
    "pyglet",
    "warp-lang",
    "torch",
    "numpy",
    "scipy",
    "trimesh",
    "open3d"
]
 
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
demo = "python scripts/demo_gui.py"

[tool.pixi.pypi-dependencies]
marsoom = { path = ".", editable = true }
 
[tool.pixi.build-dependencies]
pip = "*"